Change task to have array of files in b64 like commands
